force-app/main/default/objects/Statement__c/fields/Balance_End__c.field-meta.xml
<CustomField>
    <fullName>Balance_End__c</fullName>
    <label>Balance End</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>