force-app/main/default/objects/Statement__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>