force-app/main/default/objects/Statement__c/fields/Statement_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Period_End_Date__c</fullName>
    <label>Statement Period End Date</label>
    <type>Date</type>
</CustomField>