force-app/main/default/objects/Statement__c/fields/Statement_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Statement_Period_Start_Date__c</fullName>
    <label>Statement Period Start  Date</label>
    <type>Date</type>
</CustomField>