force-app/main/default/objects/Statement__c/recordTypes/BANK_STATEMENTS.recordType-meta.xml
<RecordType>
    <fullName>BANK_STATEMENTS</fullName>
    <active>true</active>
    <description>Kontoauszug in German</description>
    <label>Bank Statements</label>
</RecordType>