force-app/main/default/objects/Statement__c/recordTypes/STATEMENT_OF_ACCOUNTS.recordType-meta.xml
<RecordType>
    <fullName>STATEMENT_OF_ACCOUNTS</fullName>
    <active>true</active>
    <description>Rechnungsabschluss in German</description>
    <label>Statement Of Accounts</label>
</RecordType>